- The FTP VFS now resolves symlinks, so links to directories should no
  longer show up as plain files in the browser
- The DirectoryListSet would reject directories whose names didn't match
  the file name filter, and not check any files within them (since 2.6pre2)
- On some JVMs, IORequest.java would cause VerifyErrors, and as a result,
  buffers could not be loaded or saved (since 2.6pre2)

* Version 2.6pre2

+ New Features

- New file chooser. Has the following advantages over the Swing file chooser:
  - Uses VFS code, so you can browse the local filesystem and remote FTP
    sites from one dialog box (the old FTP Browser is gone, by the way)
  - Multiple file selection is supported
  - Remote directory listings are cached for improved performance. The cache
    can be flushed with the Utilities->Flush Remote Directory Cache command
  - Tooltips are shown for obscured and truncated file names
  - More flexible sorting
  - Frequently-visited directories can be stored in a 'favorites' list
  - Optional 'tree view' allows quick viewing of an entire directory
    hierarchy
  - Hidden files can optionally be displayed
  - Geometry of file chooser is saved
  - The 'Find file' widget has not yet been ported to the VFS. It will appear
    in a future pre-release.
- Utilities->File System Browser displays a stand-alone version of the file
  chooser

+ Enhancements

- Major changes to VFS code to support browsing
- Updated JavaScript mode (Ollie Rutherford)
- Tool bar buttons now have a 'rollover' effect
- Global Options dialog box re-arranged somewhat
- 'Send' command moved to a plugin, out of the core
- Repeated actions can now be undone in one operation
- Macro invocations can now be undone in one operation
- HyperSearch command no longer displays the wait cursor in all open views
  while searching -- because the search is threaded, this didn't make sense

+ Bug Fixes

- Plugins couldn't be removed on systems that disallow removing open files,